@@ -42,6 +42,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #18582: Add 'pbkdf2_hmac' to the hashlib module. It implements PKCS#5
+  password-based key derivation functions with HMAC as pseudorandom function.
+
 - Issue #19131: The aifc module now correctly reads and writes sampwidth of
   compressed streams.
 
